<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="STUDENTS DB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Даты"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="29dp" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fromDate"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/period" />

        <TextView
            android:id="@+id/textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvStartDate"
            app:layout_constraintTop_toBottomOf="@+id/period" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toDate"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStartDate" />

        <TextView
            android:id="@+id/textFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvEndDate"
            app:layout_constraintTop_toBottomOf="@+id/textStart" />

    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="237dp"
        app:layout_constraintGuide_percent=".5" />


    <LinearLayout
        android:id="@+id/inputCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/ex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Изменить период поиска оценок"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/tvEndDate" />

    <LinearLayout
        android:id="@+id/inputDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/ex2">

        <EditText
            android:id="@+id/editDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            android:inputType="number" />

        <EditText
            android:id="@+id/editYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClickStart"
            android:text="from"
            android:width="200dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnTo"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/inputDate" />

        <Button
            android:id="@+id/btnTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClickFinish"
            android:width="200dp"
            android:text="@string/to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFrom"
            app:layout_constraintTop_toBottomOf="@id/inputDate" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="ЗАПРОСЫ"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFrom" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="facultyStatOnClick"
        android:text="@string/faculties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="groupsStatOnClick"
        android:text="@string/avgGroups"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn3" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="AverangeMarkOnClick"
        android:text="@string/avgMarks"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvActions" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="BestStudentOnClick"
        android:text="@string/bestStudents"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="BadStudentOnClick"
        android:text="@string/badStudents"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn2" />
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add new Students to trigger trigger"
        android:onClick="addoddstudents"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ОТЧИСЛИТЬ ОЛЕГА"
        android:onClick="deloleg"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="See students"
        android:onClick="seestudents"/>
</LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>